--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-
-    <script src="./compiled.js"></script>
+    <!-- commonJS -->
+    <!-- <script src="./compiled.js"></script> -->
+    <script data-main="./main.js" src="./libs/require.js"></script>
 </body>
 
 </html>
